[package]
name = "tag-pp"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.5.5", default-features = false, features = ["std", "perf", "unicode-gencat"] }
tag-geotag = { path = "../tag-geotag" }
chrono = { version = "0.4.19", default-features = false }
once_cell = { version = "1.10.0", default-features = false, features = ["std"] }
anyhow = { version = "1.0.56", default-features = false, features = ["std"] }
clap = { version = "3.1.6", features = ["color", "derive"] }

[features]
unfair = []
